# Anything-Extract

./: .env.docker.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND_CODE_REVIEW.md  LICENSE  OPTIMIZATION_PLAN.md  OPTIMIZATION_ROADMAP.md  QANYTHING_PROGRESSIVE_ADOPTION_PLAN.md  README.md  docker-compose-linux.yaml  docker-compose-mac.yaml  docker-compose-win.yaml  docker_run.sh  pr-test-20260213-103947.txt  pr_test_20260213_110809_4532.txt  run.sh  知识库对齐_dify_实施方案_448f7195.plan.md
backend/: __init__.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: documents.py  extract.py  extract_stream.py  knowledge_bases.py  system.py  tags.py
backend/app/models/: knowledge_entities.py  schemas.py
backend/app/services/: tag_service.py
backend/app/utils/: error_handler.py
backend/core/: config.py  database.py  indexing_runner.py
backend/providers/embedding/: __init__.py  base.py  model_dimensions.py  ollama.py
backend/providers/llm/: __init__.py  base.py  ollama.py
backend/providers/vector_db/: __init__.py  base.py  lancedb.py
backend/services/: document_ingest_service.py  document_service.py  embedding_service.py  extraction_service.py  hit_testing_service.py  ingest_queue_service.py  knowledge_base_service.py  llm_processing_service.py  qanything_parser_bridge.py  rag_enhancement_service.py  retrieval_service.py  runtime_config_service.py
backend/utils/: document_parser.py  logging.py  text_splitter.py
backend/utils/loaders/: __init__.py  (+1 more)
backend/workers/: ingest_worker.py
(+119 files in other folders)
